# motionReco

./: .gitignore  CMakeLists.txt  CMakeLists.txt.UDXPhj  README.md  main.cpp
classifiers/: RnnClassifier.cpp  RnnClassifier.h
core/: Function.cpp  Function.h  Globals.h
detectors/: YoloDetector.cpp  YoloDetector.h
src/: main.cpp
utils/: Utils.cpp  Utils.h
